# backend/implemented/controllers/employee_controller.py
@@ -54,3 +54,23 @@ def get_employees():  # noqa: E501
             description=row.description
         ) for row in rows.all()
     ]
+
+
+def delete_employee(employee_id):  # noqa: E501
+    """delete_employee
+
+    Delete a list of action recommendation by targetType and targetId # noqa: E501
+
+    :param employee_id:
+    :type employee_id: str
+
+    :rtype: Employee
+    """
+    cluster = Cluster()
+    session = cluster.connect('test')
+
+    query = "DELETE FROM employee WHERE employ_id = ? ;"
+    prepared = session.prepare(query)
+    bound_stsm = prepared.bind((employee_id,))
+    session.execute(bound_stsm)
+    return employee_id
